# MeshFrame

./: README.md
APP/BodyReconstruction/MotionSequenceDisplay/: CMakeLists.txt  MotionSequenceDisplay.cpp
APP/BodyReconstruction/MotionSequenceDisplayWithTexture/: CMakeLists.txt  MotionSequenceDisplay.cpp
Examples/DynamicProp/: CMakeLists.txt  main.cpp
Examples/Iterator/: CMakeLists.txt  main.cpp
Examples/MeshSimplifyQEM/: CMakeLists.txt  Readme.txt  main.cpp  mesh.cpp  mesh.h
Examples/MeshViewer/: CMakeLists.txt  main.cpp
Examples/ReadAndWrite/: CMakeLists.txt  main.cpp
MeshFrame/MeshFrame/core/FileIO/: PlyFile.h
MeshFrame/MeshFrame/core/Geometry/: BaryCoordinates3D.h  BaryCoordinates4D.h  Circumsphere.h  Point.h  Point2.h  Point4.h  PointF.h  PointInBuffer.h  quat.h
MeshFrame/MeshFrame/core/Memory/: Array.h  MPIterator.h  MPIterator_.h  MemoryPool.h  MemoryPool2.h  MemoryPoolThreadSafe.h
MeshFrame/MeshFrame/core/Mesh/: BaseMesh.h  Boundary.h  Color.h  DynamicMesh.h  Edge.h  Face.h  HalfEdge.h  Iterators.h  Iterators2.h  MeshCoreHeaders.h  Props.h  Types.h  Vertex.h
MeshFrame/MeshFrame/core/Parser/: IOFuncDef.h  StrUtil_fast.h  parser.h  strutil.h  traits_io.h
MeshFrame/MeshFrame/core/TetMesh/: BaseTMeshNew.h  BaseTMesh_Orientation.h  TIterators2.h  TMeshInterFace.h  TMeshLibHeaders.h  TProps.h  _edge.h  _halfedge.h  _vertex.h  basetmesh.h  edge.h  face.h  halfedge.h  halfface.h  tedge.h  tet.h  titerators.h  titerators_O.h  tvertex.h  vertex.h
MeshFrame/MeshFrame/core/TetMesh/BaryCoordinates/: BaryCoordinates3D.h
MeshFrame/MeshFrame/core/algorithm/: subdivision.h
MeshFrame/MeshFrame/core/algorithm/Denoising/: Denoising.h  DenoisingHeaders.h  Edge_Denoising.h  Face_Denoising.h  Vetex_Denoising.h
MeshFrame/MeshFrame/core/algorithm/Foliation/: TetMeshFL.h  tetFL.h
MeshFrame/MeshFrame/core/algorithm/Foliation_4_21_9.15/: BaryCoordinates2D.h  BaryCoordinates3D.h  BorderType.h  TFaceFL.h  TetMeshFL.h  tetFL.h
MeshFrame/MeshFrame/core/algorithm/Shelling/: TetSheller.h  TetShelling.h
MeshFrame/MeshFrame/core/algorithm/Subdivision/: subdivision.h
MeshFrame/MeshFrame/core/bmp/: RgbImage.cpp  RgbImage.h
MeshFrame/MeshFrame/core/viewer/: Arcball.h  MeshViewer.cpp  MeshViewer.h
